mid-top slider completely finished, and h1 alignments corrected

--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding-left: 3.5rem;
+    margin: 2rem 0rem;
 }
 
 .nav{
@@ -109,3 +110,35 @@
     }
 }
 
+.details{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding: 0.5rem 1rem;
+}
+
+.product-deets{
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+
+    h1{
+        font-size: 19px;
+        font-weight: 300;
+    }
+}
+
+.product-name{
+    width: 90%;
+}
+
+.product-price{
+    text-align: end;
+}
+
+.category{
+    font-size: 19px;
+    font-weight: 300;
+    color: #858585;
+    padding-top: 0.5rem;
+}
